--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Dashboard
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,59 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Dashboard</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>&dollar; 724,654</ion-card-title>
+      <ion-card-subtitle>Current Balance</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      Here's a small text description for the card content. Nothing more, nothing less.
+    </ion-card-content>
+  
+    <ion-button fill="clear">Track</ion-button>
+    <ion-button fill="clear">Transact</ion-button>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Recent Transactions</ion-card-title>
+      <ion-card-subtitle>Transaction History</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail >
+            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
+          </ion-thumbnail>
+          <ion-label>Money In: Payment amount &dollar;245,000 into acc...</ion-label>
+        </ion-item>
+  
+        <ion-item>
+          <ion-thumbnail >
+            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
+          </ion-thumbnail>
+          <ion-label>In-App transaction purchase Mobile Data amount &dollar;10...</ion-label>
+        </ion-item>
+  
+        <ion-item>
+          <ion-thumbnail >
+            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
+          </ion-thumbnail>
+          <ion-label>Money Out: Payment amount &dollar;18,000 from acc...</ion-label>
+        </ion-item>
+  
+        <ion-item lines="none">
+          <ion-thumbnail >
+            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
+          </ion-thumbnail>
+          <ion-label>Money In: Payment amount &dollar;101,000 into acc...</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
