Authentication flow Login and Sign Up Page
Authentication flow Login and Sign Up Page

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -35,30 +35,22 @@
     <ion-card-content>
       <ion-list>
         <ion-item>
-          <ion-thumbnail >
-            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
-          </ion-thumbnail>
+            <ion-icon aria-hidden="true" name="receipt-outline" slot="start"></ion-icon>
           <ion-label>Money In: Payment amount &dollar;245,000 into acc...</ion-label>
         </ion-item>
   
         <ion-item>
-          <ion-thumbnail >
-            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
-          </ion-thumbnail>
+            <ion-icon aria-hidden="true" name="receipt-outline" slot="start"></ion-icon>
           <ion-label>In-App transaction purchase Mobile Data amount &dollar;10...</ion-label>
         </ion-item>
   
         <ion-item>
-          <ion-thumbnail >
-            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
-          </ion-thumbnail>
+            <ion-icon aria-hidden="true" name="receipt-outline" slot="start"></ion-icon>
           <ion-label>Money Out: Payment amount &dollar;18,000 from acc...</ion-label>
         </ion-item>
   
         <ion-item lines="none">
-          <ion-thumbnail >
-            <ion-icon aria-hidden="true" name="receipt-outline"></ion-icon>
-          </ion-thumbnail>
+            <ion-icon aria-hidden="true" name="receipt-outline" slot="start"></ion-icon>
           <ion-label>Money In: Payment amount &dollar;101,000 into acc...</ion-label>
         </ion-item>
       </ion-list>
