--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Bank
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,157 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Bank</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-tab-button tab="tab4" href="/tabs/tab3">
+              <ion-icon aria-hidden="true" name="cash-outline"></ion-icon>
+              <ion-label>Pay</ion-label>
+            </ion-tab-button>
+          </ion-col>
+          <ion-col>
+            <ion-tab-button tab="tab4" href="/tabs/tab3">
+              <ion-icon aria-hidden="true" name="basket-outline"></ion-icon>
+              <ion-label>Buy</ion-label>
+            </ion-tab-button>
+          </ion-col>
+          <ion-col>
+            <ion-tab-button tab="tab4" href="/tabs/tab3">
+              <ion-icon aria-hidden="true" name="card-outline"></ion-icon>
+              <ion-label>My Cards</ion-label>
+            </ion-tab-button>
+          </ion-col>
+          <ion-col>
+            <ion-tab-button tab="tab4" href="/tabs/tab3">
+              <ion-icon aria-hidden="true" name="wallet-outline"></ion-icon>
+              <ion-label>Withdraw</ion-label>
+            </ion-tab-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Accounts</ion-card-title>
+      <ion-card-subtitle>Day To Day</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Current</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 724,654</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Credit Card</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 100,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Savings</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 462,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Investments</ion-card-title>
+      <ion-card-subtitle>Short/Long Term </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Shares</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 8,990,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Forex</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 380,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Insurance</ion-card-title>
+      <ion-card-subtitle>Protect</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Vehicle</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 1,250,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Property</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 3,000,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Belongings</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 830,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Loans & Facilities</ion-card-title>
+      <ion-card-subtitle>Active Debt</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+            <ion-card>
+              <ion-card-content>
+                <ion-item lines="none" [button]="true">
+                  <ion-label>Home Loan</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; 2,750,000</ion-note>
+                </ion-item>
+              </ion-card-content>
+            </ion-card>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
