--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,3 +2,17 @@
     color: #FFF;
     background-color: #000;
 }
+
+.current-balance-card{
+    color: #FFF;
+    background-color: #1A5276;
+}
+
+
+
+.current-balance-card ion-card-subtitle{
+    color: #D0D3D4;
+}
+.current-balance-card ion-button{
+    color: #D0D3D4;
+}
