--- a/src/app/account/login/login.page.html
+++ b/src/app/account/login/login.page.html
@@ -23,8 +23,22 @@
       </ion-item>
       <p class="forget-text"><a (click)="change('forget')">Forgot Password</a></p>
       <p class="signup-text">I'm a new user&nbsp;<a (click)="change('signup')">Sign Up</a></p>
-      <ion-button class="login-button" (click)="login()" expand="block">Login</ion-button>
-      <!-- <ion-button class="google-button" expand="block" color="light"><ion-icon name="logo-google"></ion-icon>&nbsp;&nbsp;Google Signin</ion-button> -->
+      <ion-button class="login-button" (click)="login()"  id="open-loading" expand="block">Login</ion-button>
+      <hr/>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-button  color="light"><ion-icon name="logo-google"></ion-icon></ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button  color="light"><ion-icon name="logo-facebook"></ion-icon></ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button  color="light"><ion-icon name="logo-linkedin"></ion-icon></ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      
     </form>
   </div>
 
@@ -108,6 +122,7 @@
   (didDismiss)="setOpen(false)"
 ></ion-toast>
 </ion-content>
+<ion-loading trigger="open-loading" message="Loading..." duration="3000" class="custom-loading"></ion-loading>
 <ion-footer color="white">
   <ion-toolbar>
     <p class="copyright"><a>Cypcode</a></p>
