--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -30,9 +30,9 @@
             </ion-tab-button>
           </ion-col>
           <ion-col>
-            <ion-tab-button tab="tab4" href="/tabs/tab3">
+            <ion-tab-button href="/transfer">
               <ion-icon aria-hidden="true" name="card-outline"></ion-icon>
-              <ion-label>My Cards</ion-label>
+              <ion-label>Transfer</ion-label>
             </ion-tab-button>
           </ion-col>
           <ion-col>
@@ -53,34 +53,19 @@
     </ion-card-header>
     <ion-card-content>
       <ion-list>
-            <ion-card>
+            <ion-card *ngFor="let account of accountBalanceList">
               <ion-card-content>
                 <ion-item lines="none" [button]="true">
-                  <ion-label>Current</ion-label>
-                  <ion-note slot="end" color="medium">&dollar; 724,654</ion-note>
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-            <ion-card>
-              <ion-card-content>
-                <ion-item lines="none" [button]="true">
-                  <ion-label>Credit Card</ion-label>
-                  <ion-note slot="end" color="medium">&dollar; 100,000</ion-note>
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-            <ion-card>
-              <ion-card-content>
-                <ion-item lines="none" [button]="true">
-                  <ion-label>Savings</ion-label>
-                  <ion-note slot="end" color="medium">&dollar; 462,000</ion-note>
-                </ion-item>
+                  <ion-label>{{account.account}}</ion-label>
+                  <ion-note slot="end" color="medium">&dollar; {{account.balance}}</ion-note>
+                 </ion-item>
+                 <ion-badge slot="end" color="medium" *ngIf="account.overdraft">Overdraft &dollar; {{account.overdraft}}</ion-badge>
+                
               </ion-card-content>
             </ion-card>
       </ion-list>
     </ion-card-content>
   </ion-card>
-
 
   <ion-card>
     <ion-card-header>
