--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -89,17 +89,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="dashboard" href="/tabs/dashboard">
       <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="bank" href="/tabs/bank">
       <ion-icon aria-hidden="true" name="card-outline"></ion-icon>
       <ion-label>Bank</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="messages" href="/tabs/messages">
       <ion-icon aria-hidden="true" name="notifications-outline"></ion-icon>
       <ion-label>Messages</ion-label>
     </ion-tab-button>
